設置日期選擇

--- a/src/UI/UserData.fxml
+++ b/src/UI/UserData.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="1259.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="1259.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UserDataController">
    <children>
       <Label fx:id="UserName" layoutX="283.0" layoutY="138.0" text="Label" />
       <Label fx:id="UserAsset" layoutX="283.0" layoutY="197.0" text="Label" />
