--- a/src/UI/SelectStock.fxml
+++ b/src/UI/SelectStock.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="756.0" prefWidth="1260.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="756.0" prefWidth="1260.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.SelectStockController">
    <children>
       <Button fx:id="UserInformationButtin" layoutX="1136.0" layoutY="23.0" mnemonicParsing="false" text="Youe_information" />
       <Text layoutX="526.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stock_Select" wrappingWidth="207.41015625">
@@ -17,15 +16,15 @@
          </font>
       </Text>
       <Button layoutX="20.0" layoutY="23.0" mnemonicParsing="false" text="Button" />
-      <TextField layoutX="555.0" layoutY="175.0" />
-      <Button layoutX="604.0" layoutY="426.0" mnemonicParsing="false" text="Button" />
-      <DatePicker fx:id="StockHistoryData" layoutX="553.0" layoutY="246.0" prefHeight="25.0" prefWidth="164.0" promptText="Enter a date" />
-      <Text layoutX="421.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="StockNumber：">
+      <TextField fx:id="StockNumber" layoutX="616.0" layoutY="208.0" onAction="#getStockNumber" />
+      <Button fx:id="submitButton" layoutX="604.0" layoutY="426.0" mnemonicParsing="false" onAction="#submit" text="submit" />
+      <DatePicker fx:id="StockHistoryData" layoutX="614.0" layoutY="279.0" onAction="#getData" prefHeight="25.0" prefWidth="164.0" promptText="Enter a date" />
+      <Text layoutX="482.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="StockNumber：">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text layoutX="421.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select a date：">
+      <Text layoutX="482.0" layoutY="299.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select a date：">
          <font>
             <Font size="19.0" />
          </font>
