--- a/src/UI/login.fxml
+++ b/src/UI/login.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="756.0" prefWidth="1258.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller=" ">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="756.0" prefWidth="1258.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.loginController">
    <children>
       <PasswordField fx:id="PasswordTextFiled" layoutX="592.0" layoutY="313.0" />
       <TextField fx:id="AccountTextFiled" layoutX="592.0" layoutY="258.0" prefHeight="26.0" prefWidth="152.0" />
